# OpenNotes

./: .gitignore  index.py  main.py  pyproject.toml
notes/: notes1.txt  notes2.txt  notes3.txt
src/: query_notes_retrieval.py
